--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "export": "next export",
-    "deploy": "npm run build && gh-pages -d out"
+    "lint": "eslint"
   },
   "dependencies": {
     "next": "16.0.3",
